--- a/.github/workflows/pr-quota-manager.yml
+++ b/.github/workflows/pr-quota-manager.yml
@@ -49,5 +49,5 @@ jobs:
             }
             const owner = context.repo.owner
             const repo = context.repo.repo
-            const dryRun = context.payload.inputs?.dryRun || false
+            const dryRun = context.payload.inputs?.dryRun === 'true'
             await handler({github, core, username, owner, repo, dryRun})
